--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!-- <meta content='#0A8FDC' name='theme-color' /> -->
   <!-- <link href='%PUBLIC_URL%/logo.png' rel='apple-touch-icon' /> -->
   <link rel="icon" href="%PUBLIC_URL%/logo.png">
-  <meta content='Tashkent Market Admin panel' name='description' />
+  <meta content='Leapmotorca Admin panel' name='description' />
   <!-- <meta property='og:image' content='%PUBLIC_URL%/logo512.png' /> -->
   <!-- <meta property='og:site_name' content='Tashkent Market Admin panel' /> -->
   <script async defer
@@ -16,7 +16,7 @@
   <link rel='stylesheet' href='/loader.css' />
   <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap'
         rel='stylesheet'>
-  <title>Tashkent Market Admin Panel</title>
+  <title>Leapmotorca Admin panel</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
