build boldi base qoshildi

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta content='Leapmotorca Admin panel' name='description' />
   <!-- <meta property='og:image' content='%PUBLIC_URL%/logo512.png' /> -->
   <!-- <meta property='og:site_name' content='Tashkent Market Admin panel' /> -->
+  <base href="/admin/">
   <script async defer
           src='https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places,geometry,drawing&key=AIzaSyBtgCpqXBu7Mdl2bzhhHnutAroyEteQo9s'>
   </script>
