--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,10 @@
   <meta content='Leapmotorca Admin panel' name='description' />
   <!-- <meta property='og:image' content='%PUBLIC_URL%/logo512.png' /> -->
   <!-- <meta property='og:site_name' content='Tashkent Market Admin panel' /> -->
-  <base href="/admin/">
   <script async defer
           src='https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places,geometry,drawing&key=AIzaSyBtgCpqXBu7Mdl2bzhhHnutAroyEteQo9s'>
   </script>
-  <link rel='stylesheet' href='/loader.css' />
+  <link rel='stylesheet' href='/admin/loader.css' />
   <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap'
         rel='stylesheet'>
   <title>Leapmotorca Admin panel</title>
@@ -24,7 +23,7 @@
 <div id='root'>
   <div class='loader'>
     <div class='site-logo'>
-      <img src='/assets/images/logo.png' alt='logo'>
+      <img src='/admin/assets/images/logo.png' alt='logo'>
     </div>
     <div class='loader-spin'>
       <span class='ant-spin-dot ant-spin-dot-spin'>
