--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
   <script async defer
           src='https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places,geometry,drawing&key=AIzaSyBtgCpqXBu7Mdl2bzhhHnutAroyEteQo9s'>
   </script>
-  <link rel='stylesheet' href='/loader.css' />
-  <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap'
-        rel='stylesheet'>
+  <link rel='stylesheet' href='/admin/loader.css' />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <title>Leapmotorca Admin panel</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
 <div id='root'>
   <div class='loader'>
     <div class='site-logo'>
-      <img src='/assets/images/logo.png' alt='logo'>
+      <img src='/admin/assets/images/logo.png' alt='logo'>
     </div>
     <div class='loader-spin'>
       <span class='ant-spin-dot ant-spin-dot-spin'>
